--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,30 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  font-family: "Kumbh Sans", sans-serif, Georgia, 'Times New Roman', Times, serif;
+  font-size: 16px;
+  --CLR-PRIMARY: #c20b0e;
+  --CLR-BG: #f5f5f7;
+  --CLR-LINKS: aliceblue;
+  --CLR-LINK-HOVER: rgb(223, 226, 228);
+  --CLR-LINK-NAV: black;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--CLR-BG);
+  overflow-x: hidden;
 }
 
 code {
