--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,16 @@
 :root {
   font-family: "Kumbh Sans", sans-serif, Georgia, 'Times New Roman', Times, serif;
   font-size: 16px;
+  --NAV-LINK-CLR: black;
   --CLR-PRIMARY: #c20b0e;
-  --CLR-BG: #f5f5f7;
-  --CLR-LINKS: aliceblue;
+  --BG-COLOR: #f5f5f7;
+  --BTN-HOVER-BG: var(--CLR-PRIMARY);
+  --BTN-HOVER-COLOR: aliceblue;
+  --BTN-COLOR: var(--CLR-PRIMARY);
+  --BTN-BORDER: var(--CLR-PRIMARY);
+  --FOOTER-LINK-COLOR: var(--NAV-LINK-CLR);
+  --FOOTER-LINK-HOVER: var(--BG-COLOR);
   --CLR-LINK-HOVER: rgb(223, 226, 228);
-  --CLR-LINK-NAV: black;
 }
 
 html {
@@ -25,6 +30,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--CLR-BG);
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 code {
