--- a/src/styles/homepage.module.css
+++ b/src/styles/homepage.module.css
@@ -1,15 +1,40 @@
 .objective {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 100vh;
     flex-wrap: wrap;
-    padding-left: 1.5em;
+    padding: 1.2em;
+    position: relative;
+    /* margin: 0 auto;
+    width: 70vw;
+    position: relative; */
 }
 
-.objective .heading {
-    font-size: clamp(1em, 11vw, 20em);
+.ipads {
+    width: clamp(3em, 30vw ,30em);
+    height: auto;
+    top: 60vh;
+    left: 20px;
+}
+
+.hat {
+    width: clamp(3em, 30vw , 20em);;
+    height: auto;
+    top: 20vh;
+    left: 100px;
+    rotate: -30deg;
+}
+
+.heading {
+    font-size: clamp(10px, 7vh, 3.5em);
     color: var(--CLR-PRIMARY);
+    text-align: center;
+}
+
+.heading2 {
+    text-align: right;
 }
 
 .promo {
@@ -22,18 +47,18 @@
     padding-right: 1.5em;
 }
 
-.promo .desc {
+/* .promo .desc {
     text-align: end;
-    font-size: clamp(1vh, 5vw, 12em);
-    /* max-width: 30ch; */
+    font-size: clamp(1vh, 5vw, 12em); -
+    align-self: flex-end;
+    max-width: 30ch; -
     text-decoration: underline;
     text-decoration-style: dotted;
     text-underline-offset: 0.2em;
-}
+} */
 
-.signup {
+.flex_align_right {
     align-self: flex-end;
-    margin-top: 1em;
 }
 
 .shirts {
@@ -43,17 +68,20 @@
 }
 
 .watches {
-    display: flex;
-    align-self: flex-start;
-    margin-top: 150px;
-    width: 30vw;
+    position: absolute;
+    top: 40vh;
+    left: 10px;
+    width: clamp(3em, 30vw ,30em);
+    z-index: -1;
+    transform: scale(0.8);
 }
 
-.offerbtn {
-    align-self: flex-start;
+.offerBtn, .signupBtn {
+    margin-top: 1.1em;
 }
 
-@media(max-width: 800px) {
+
+/* @media(max-width: 800px) {
     .objective .heading {
         font-size: clamp(50px, 15vw, 80px);
     }
@@ -69,4 +97,4 @@
     .watches {
         width: 250px;
     }
-}
+} */
