--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -36,3 +36,16 @@
     text-align: center;
     margin-top: 2em;
 }
+
+@media(max-width: 800px) {
+
+    .ack {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .col1, .col2, .col3, .col4 {
+        width: 50%;
+        margin-bottom: 1em;
+    }
+}
