--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,7 +1,7 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    align-items:center;
+    align-items: center;
     background-color: rgba(255, 255, 255, 0.8);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
@@ -14,6 +14,23 @@
     z-index: 2;
 }
 
+.nav_desktop {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav_desktop li:last-child {
+    display: none;
+}
+
+.nav_desktop li:nth-last-child(2) {
+    position: absolute;
+    right: 0;
+    padding-right: 0.5em;
+}
+
 .nav .icon {
     font-size: clamp(1.7em, 3.5vh ,5.7em);
     font-weight: 700;
@@ -21,19 +38,15 @@
     color: var(--CLR-PRIMARY);
 }
 
-.nav ul {
+.nav_desktop ul {
     display: flex;
 }
 
-.nav li {
+.nav_desktop li {
     margin-inline: 1em;
 }
 
-.nav .donate {
-    padding-right: 0.5em;
-}
-
-:where(.nav li, .nav .donate) {
+:where(.nav li, .nav_desktop .donate) {
     font-weight: 800;
 }
 
@@ -43,4 +56,48 @@
 
 .nav a:hover, .nav a:focus, .donate:hover {
     color: var(--CLR-PRIMARY);
+}
+
+.nav_mobile {
+    display: none;
+}
+
+@media(max-width: 800px) {
+
+
+    .hideOnMobile {
+        display: none;
+    }
+
+    .nav_desktop {
+        justify-content: flex-end;
+    }
+
+    .nav_mobile {
+       position: fixed;
+       top: 0;
+       right: 0;
+       height: 100vh;
+       width: 250px;
+       z-index: 10;
+       display: none;
+       flex-direction: column;
+       box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+       background-color: rgba(255, 255, 255, 0.95);
+       padding-left: 1.2em;
+       backdrop-filter: blur(10px);
+    }
+
+    .nav_desktop li:last-child {
+        display: block;        
+    }
+
+    .nav_elements {
+        padding: 1.3em;
+    }
+
+    .nav_elements li {
+        width: 100%;
+        margin: 1em;
+    }
 }
