--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -62,6 +62,26 @@
     display: none;
 }
 
+@keyframes slide {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+/* @keyframes slide-rev {
+    0% {
+        transform: translateX(0%);
+    }
+
+    100% {
+        transform: translateX(100%);
+    }
+} */
+
 @media(max-width: 800px) {
 
 
@@ -83,9 +103,12 @@
        display: flex;
        flex-direction: column;
        box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
-       background-color: rgba(255, 255, 255, 0.95);
+       background-color: rgba(255, 255, 255, 0.91);
        /* padding-left: 1.2em; */
-       backdrop-filter: blur(10px);
+       backdrop-filter: blur(8px);
+       -webkit-backdrop-filter: blur(8px);
+       transform: translate3d(0, 0, 0);
+       animation: slide 0.4s;
     }
 
     .nav_desktop li:last-child {
@@ -105,6 +128,5 @@
     .nav_elements li:not(:first-child):hover {
         background-color: rgb(188, 185, 185);
     }
-
 
 }
