--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -8,7 +8,7 @@
     transform: translate3d(0, 0, 0);
     width: 100%;
     font-size: clamp(1.2em, 2.6vh, 3em);
-    position: fixed;
+    position: sticky;
     top: 0;
     padding: 0.4em 0.4em;
     z-index: 2;
